# microproject_c

./: CMakeLists.txt  README.md  main.c
features/: features.c  features.h
stringList/: stringList.c  stringList.h
transaction/: transaction.c  transaction.h
